Set up remaining widgets on Crew page 2

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -98,7 +98,6 @@ input.sheet-tabSelector:checked + span::before
 	border-bottom-color: #fff;
 }
 
-
 /*General Sheet Style*/
 body
 {
@@ -107,14 +106,16 @@ body
 	color: #000;
 	background-color: #FFF;
 	line-height: 150%;
+	max-width: 900px;
+	min-width: 900px;
 }
 
-section.sheet-header
+.sheet-header
 {
 	display: block;
 	vertical-align: middle;
-	background-color: black;
-	color: #fdf6ee;
+	max-width: 900px;
+	min-width: 900px;
 }
 
 img.sheet-BGImg
@@ -345,12 +346,17 @@ div.sheet-row1400
 	top: 1400px;
 }
 
+div.sheet-row1425
+{
+	position: absolute;
+	top: 1435px;
+}
+
 div.sheet-row1450
 {
 	position: absolute;
 	top: 1450px;
 }
-
 
 div.sheet-row1500
 {
@@ -629,8 +635,8 @@ select, textarea, input[type="text"], input[type="number"]
 	border-bottom: thin solid #D3D3D3;
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	color: #000;
-	height: 1.25em;
-	line-height: 1.25em;
+	height: 100%;
+	line-height: 100%;
 	font-variant: normal;
 }
 
@@ -649,7 +655,6 @@ select.sheet-start
 select.sheet-full,
 input[type="text"].sheet-full,
 input[type="number"].sheet-full,
-p.sheet-full
 {
 	width: 98%;
 }
@@ -749,8 +754,6 @@ textarea
 		width: 95%;
 	}
 
-/*Tables*/
-
 /* Aspects */
 div.sheet-fullPage
 {
@@ -758,21 +761,18 @@ div.sheet-fullPage
 	box-sizing: content-box;
 }
 
-table.sheet-twoThirdPage,
 div.sheet-twoThirdPage
 {
 	width: 600px;
 	box-sizing: content-box;
 }
 
-table.sheet-threeQuarterPage,
 div.sheet-threeQuarterPage
 {
 	width: 700px;
 	box-sizing: content-box;
 }
 
-table.sheet-halfPage,
 div.sheet-halfPage
 {
 	width: 430px;
@@ -780,330 +780,16 @@ div.sheet-halfPage
 }
 
 /*Departments, skills, specialties, tools*/
-table.sheet-thirdPage,
 div.sheet-thirdPage
 {
 	width: 280px;
 	box-sizing: content-box;
 }
 
-table.sheet-quarterPage,
 div.sheet-quarterPage
 {
 	width: 200px;
 	box-sizing: content-box;
-}
-
-td.sheet-smallCell
-{
-	width: 30px;
-}
-
-p.sheet-armourtypes
-{
-	text-indent: 4em;
-	font-style: italic;
-	font-size: 0.9em;
-}
-
-/*Lists*/
-div.sheet-doubleColumn
-{
-	width: 580px;
-	box-sizing: content-box;
-}
-
-/* Hide actual radio/checkbox for dice tracks*/
-input[type="checkbox"].sheet-Overcharge,
-input[type="radio"].sheet-Boost,
-input[type="radio"].sheet-D6,
-input[type="checkbox"].sheet-D6,
-input[type="radio"].sheet-Reactor,
-input[type="checkbox"].sheet-armourConditionSlot,
-input[type="checkbox"].sheet-resilienceConditionSlot,
-input[type="checkbox"].sheet-integertyConditionSlot,
-input[type="checkbox"].sheet-vitalityConditionSlot,
-input[type="checkbox"].sheet-checkbox,
-input[type="checkbox"].sheet-patch
-{
-	opacity: 0;
-	width: 16px;
-	height: 16px;
-	position: relative;
-	top: 5px;
-	left: 6px;
-	margin: -10px;
-	cursor: pointer;
-	z-index: 1;
-}
-
-	/* Fake checkbox for general checkboxes*/
-	input[type="checkbox"].sheet-checkbox + span::before
-	{
-		margin-right: 4px;
-		line-height: 14px;
-		text-align: right;
-		display: inline-block;
-		vertical-align: baseline;
-		content: "⚪";
-		width: 8px;
-		height: 8px;
-		font-size: 8px;
-	}
-
-/* Fake checkbox checks as filled general checkboxes*/
-input[type="checkbox"]:checked.sheet-checkbox + span::before
-{
-	content: "⚫";
-}
-
-/* Fake checkbox as Armour condition slot*/
-input[type="checkbox"].sheet-armourConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 22px;
-	font-family: "Pictos Custom";
-	content: "e";
-}
-
-/* Fake checkbox checks as filled Armour condition slots*/
-input[type="checkbox"]:checked.sheet-armourConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 22px;
-	font-family: "Pictos Three";
-	content: "b";
-}
-
-/* Fake checkbox as Resilience condition slot*/
-input[type="checkbox"].sheet-resilienceConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 22px;
-	font-family: "Pictos Custom";
-	content: "e";
-}
-
-/* Fake checkbox checks as filled Resilience condition slots*/
-input[type="checkbox"]:checked.sheet-resilienceConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 20px;
-	font-family: "dicefontd6";
-	content: "C";
-}
-
-/* Fake checkbox as Integrity condition slot*/
-input[type="checkbox"].sheet-integertyConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 22px;
-	font-family: "Pictos Custom";
-	content: "e";
-}
-
-/* Fake checkbox checks as filled Integrity condition slots*/
-input[type="checkbox"]:checked.sheet-integertyConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 21px;
-	color: darkred;
-	font-family: "Pictos";
-	content: "*";
-}
-
-/* Fake checkbox as Vitality condition slot*/
-input[type="checkbox"].sheet-vitalityConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 22px;
-	font-family: "Pictos Custom";
-	content: "e";
-}
-
-/* Fake checkbox checks as filled Integrity condition slots*/
-input[type="checkbox"]:checked.sheet-vitalityConditionSlot + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 10px;
-	height: 10px;
-	font-size: 18px;
-	color: darkred;
-	font-family: "Pictos";
-	content: "D";
-}
-
-/* Fake checkbox for patches*/
-input[type="checkbox"].sheet-patch + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	display: inline-block;
-	vertical-align: middle;
-	content: "☐";
-	width: 14px;
-	height: 14px;
-	font-size: 18px;
-}
-
-/* Fake checkbox checks as filled patches*/
-input[type="checkbox"]:checked.sheet-patch + span::before
-{
-	content: "☒";
-}
-
-/* Fake checkbox as Overcharge*/
-input[type="checkbox"].sheet-Overcharge + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: baseline;
-	width: 12px;
-	height: 12px;
-	font-size: 22px;
-	color: lightgray;
-	font-family: "Pictos";
-	content: "!";
-}
-
-/* Remove fill from unchecked Overcharge */
-input[type="checkbox"]:checked.sheet-Overcharge + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: baseline;
-	width: 12px;
-	height: 12px;
-	font-size: 22px;
-	color: orange;
-	font-family: "Pictos";
-	content: "!";
-}
-
-/* Description Damage*/
-em.sheet-techlevelBoost
-{
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	width: 10px;
-	height: 10px;
-	font-size: 16px;
-	font-style: normal;
-	font-family: "dicefontd4";
-}
-
-/* Description Advantage */
-em.sheet-FittingD10,
-select.sheet-FittingD10
-{
-	line-height: 12px;
-	text-align: center;
-	vertical-align: baseline;
-	height: 10px;
-	width: 10px;
-	font-size: 16px;
-	font-family: "dicefontd10";
-	border: none;
-	font-weight: normal;
-}
-
-/* Fake radio as Reactor Capacity*/
-input[type="radio"].sheet-Reactor + span::before
-{
-	margin-right: 4px;
-	text-align: right;
-	vertical-align: baseline;
-	font-size: 13px;
-	content: "█";
-}
-
-/* Remove fill from all radios _after_ selected Reactor Capacity */
-input[type="radio"]:checked.sheet-Reactor ~ input[type="radio"].sheet-Reactor + span::before
-{
-	margin-right: 4px;
-	text-align: right;
-	vertical-align: baseline;
-	font-size: 13px;
-	color: lightgray;
-	content: "█";
-}
-/* Fake radio D6 */
-input[type="radio"].sheet-D6 + span::before,
-input[type="checkbox"].sheet-D6 + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 12px;
-	height: 12px;
-	font-size: 22px;
-	font-family: "dicefontd6";
-	content: "0";
-}
-
-input[type="radio"]:checked.sheet-D6 + span::before,
-input[type="checkbox"]:checked.sheet-D6 + span::before
-{
-	margin-right: 4px;
-	line-height: 14px;
-	text-align: center;
-	vertical-align: middle;
-	width: 12px;
-	height: 12px;
-	font-size: 20px;
-	font-family: "dicefontd6";
-	content: "F";
-}
-
-/* Roll Button Appearance*/
-button[type=roll].sheet-rollButton::before
-{
-	content: "0";
-	font-family: "dicefontd10";
-	font-size: 16px;
 }
 
 /* ******************************* */
@@ -1923,7 +1609,6 @@ input[type="number"].sheet-upkeepBox
 	grid-row-start: 7;
 	grid-row-end: 8;
 	font-size: 9px;
-
 }
 
 .sheet-gelDetail2
@@ -1975,7 +1660,7 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-column-start: 1;
 	grid-column-end: 5;
-	text-align:center;
+	text-align: center;
 	font-size: 9px;
 	font-style: italic;
 }
@@ -2041,6 +1726,7 @@ input[type="number"].sheet-upkeepBox
 	grid-column-start: 1;
 	grid-column-end: 3;
 }
+
 .sheet-augmentPips
 {
 	grid-column-start: 3;
@@ -2106,14 +1792,14 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-area: Associations;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/associations.png);
-	background-size: 910px 265px;
+	background-size: 900px 255px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 10px 1fr 1fr;
+	grid-template-columns: 10px repeat(2, 269px 94px 1fr);
 	grid-template-rows: 20px 16px 20px repeat(11,1fr);
 	grid-gap: 0px;
-	height: 265px;
-	width: 905px;
+	height: 250px;
+	width: 895px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
@@ -2139,24 +1825,84 @@ input[type="number"].sheet-upkeepBox
 	font-size: 9px;
 }
 
-.sheet-associationSubtitle
+.sheet-associationSubtitleA
 {
+	grid-column-start: 2;
+	grid-column-end: 3;
 	grid-row-start: 3;
 	grid-row-end: 4;
 	font-variant: small-caps;
 	font-size: 13px;
 }
 
+.sheet-associationTypeA
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 11px;
+	vertical-align: bottom;
+	text-align: center;
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-associationRatingA
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 11px;
+	vertical-align: bottom;
+	text-align: center;
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-associationSubtitleB
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 13px;
+}
+
+.sheet-associationTypeB
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 11px;
+	vertical-align: bottom;
+	text-align: center;
+	grid-column-start: 6;
+	grid-column-end: 7;
+}
+
+.sheet-associationRatingB
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+	font-variant: small-caps;
+	font-size: 11px;
+	vertical-align: bottom;
+	text-align: center;
+	grid-column-start: 7;
+	grid-column-end: 8;
+}
+
 .sheet-associationA
 {
 	grid-column-start: 2;
-	grid-column-end: 3;
+	grid-column-end: 5;
 }
 
 .sheet-associationB
 {
-	grid-column-start: 3;
-	grid-column-end: 4;
+	grid-column-start: 5;
+	grid-column-end: 8;
 }
 
 .sheet-association1
@@ -2194,38 +1940,138 @@ input[type="number"].sheet-upkeepBox
 	grid-row-start: 9;
 	grid-row-end: 10;
 }
+
 .sheet-association7
 {
 	grid-row-start: 10;
 	grid-row-end: 11;
 }
+
 .sheet-association8
 {
 	grid-row-start: 11;
 	grid-row-end: 12;
 }
+
 .sheet-association9
 {
 	grid-row-start: 12;
 	grid-row-end: 13;
 }
+
 .sheet-association0
 {
 	grid-row-start: 13;
 	grid-row-end: 14;
 }
 
-	/* ******************************* */
-	/*           Graphics              */
-	/* ******************************* */
-	/* Hide Checkboxes and Radio boxes */
-	input[type="checkbox"].sheet-hideCheckbox,
-	input[type="radio"].sheet-hideCheckbox
-	{
-		opacity: 0;
-		cursor: pointer;
-		z-index: 3;
-	}
+.sheet-descriptionWidget
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/description.png);
+	background-size: 907px 100.5px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr 3fr) 10px;
+	grid-template-rows: 20px repeat(3,minmax(15px,18px)) 1fr;
+	grid-gap: 0px;
+	height: 100px;
+	width: 905px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-descriptionTitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 5;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: 2px;
+}
+
+.sheet-descriptionColumnA
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.sheet-descriptionColumnB
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-descriptionColumnC
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-descriptionColumnD
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-descriptionList1
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-descriptionList2
+{
+	grid-row-start: 3;
+	grid-row-end: 4;
+}
+
+.sheet-descriptionList3
+{
+	grid-row-start: 4;
+	grid-row-end: 5;
+}
+
+.sheet-languageWidget
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
+	background-size: 905px 261.7px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: repeat(4, 10px 1fr) 10px;
+	grid-template-rows: 20px repeat(12px,minmax(15px,18px)) 1fr;
+	grid-gap: 0px;
+	height: 260px;
+	width: 905px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-languageTitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 9;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: 2px;
+}
+
+/* ******************************* */
+/*           Graphics              */
+/* ******************************* */
+/* Hide Checkboxes and Radio boxes */
+input[type="checkbox"].sheet-hideCheckbox,
+input[type="radio"].sheet-hideCheckbox
+{
+	opacity: 0;
+	cursor: pointer;
+	z-index: 3;
+}
 
 /* Subgrid for Tug Conditions */
 .sheet-launch-bay-tug-conditions
@@ -4768,11 +4614,6 @@ input[type=number].sheet-txtfield
 	left: -21px;
 }
 
-.charsheet .sheet-ship-block span.sheet-default
-{
-	/* left: -15px; */
-}
-
 div.sheet-ship-default:nth-child(7) > span:nth-child(2)
 {
 	margin-left: 23px;
@@ -5098,7 +4939,7 @@ input[type="number"].sheet-resourceBox
 	background-size: 440px 750px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 1fr;
+	grid-template-columns: 5px 1fr 15px;
 	grid-template-rows: 24px 1fr;
 	grid-gap: 0px;
 	height: 750px;
@@ -5108,4 +4949,12 @@ input[type="number"].sheet-resourceBox
 	padding-left: 4px;
 	padding-right: 8px;
 	z-index: 0;
+}
+
+.sheet-noteBox
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 3;
 }
