Crew Sheet Page 2 Set up 2

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -346,10 +346,10 @@ div.sheet-row1400
 	top: 1400px;
 }
 
-div.sheet-row1425
+div.sheet-row1430
 {
 	position: absolute;
-	top: 1435px;
+	top: 1430px;
 }
 
 div.sheet-row1450
@@ -392,6 +392,12 @@ div.sheet-row1700
 {
 	position: absolute;
 	top: 1700px;
+}
+
+div.sheet-row1780
+{
+	position: absolute;
+	top: 1780px;
 }
 
 div.sheet-row1800
@@ -600,6 +606,13 @@ div.sheet-column475
 	left: 475px;
 }
 
+div.sheet-column485
+{
+	justify-content: space-between;
+	position: absolute;
+	left: 485px;
+}
+
 div.sheet-column500
 {
 	justify-content: space-between;
@@ -636,6 +649,7 @@ select, textarea, input[type="text"], input[type="number"]
 	font-family: "Myriad Pro", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
 	color: #000;
 	height: 100%;
+	width: 100%;
 	line-height: 100%;
 	font-variant: normal;
 }
@@ -1968,12 +1982,12 @@ input[type="number"].sheet-upkeepBox
 .sheet-descriptionWidget
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/description.png);
-	background-size: 907px 100.5px;
+	background-size: 900px 100.5px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: repeat(2, 1fr 3fr) 10px;
-	grid-template-rows: 20px repeat(3,minmax(15px,18px)) 1fr;
-	grid-gap: 0px;
+	grid-template-columns: repeat(2, 90px 1fr) 10px;
+	grid-template-rows: 20px repeat(3,15px) 1fr;
+	grid-gap: 4px;
 	height: 100px;
 	width: 905px;
 	padding-top: 4px;
@@ -2037,13 +2051,13 @@ input[type="number"].sheet-upkeepBox
 .sheet-languageWidget
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
-	background-size: 905px 261.7px;
+	background-size: 900px 212px;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: repeat(4, 10px 1fr) 10px;
-	grid-template-rows: 20px repeat(12px,minmax(15px,18px)) 1fr;
+	grid-template-columns: repeat(4, 15px 1fr) 15px;
+	grid-template-rows: 20px 18px repeat(10,15px) 1fr;
 	grid-gap: 0px;
-	height: 260px;
+	height: 210px;
 	width: 905px;
 	padding-top: 4px;
 	padding-left: 6px;
@@ -2059,6 +2073,188 @@ input[type="number"].sheet-upkeepBox
 	grid-row-start: 1;
 	grid-row-end: 2;
 	margin-left: 2px;
+}
+
+.sheet-languageCheckboxA
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+}
+
+.sheet-languageA
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+}
+
+.sheet-languageCheckboxB
+{
+	grid-column-start: 3;
+	grid-column-end: 4;
+}
+
+.sheet-languageB
+{
+	grid-column-start: 4;
+	grid-column-end: 5;
+}
+
+.sheet-languageCheckboxC
+{
+	grid-column-start: 5;
+	grid-column-end: 6;
+}
+
+.sheet-languageC
+{
+	grid-column-start: 6;
+	grid-column-end: 7;
+}
+
+.sheet-languageCheckboxD
+{
+	grid-column-start: 7;
+	grid-column-end: 8;
+}
+
+.sheet-languageD
+{
+	grid-column-start: 8;
+	grid-column-end: 9;
+}
+
+.sheet-languagePrevelent
+{
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-contactWidget
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 20px repeat(23,15px) 1fr;
+	grid-gap: 0px;
+	height: 390px;
+	width: 435px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-contactTitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: 2px;
+}
+
+.sheet-factionTitle
+{
+	font-variant: small-caps;
+	font-size: 14px;
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	margin-left: 2px;
+}
+
+.sheet-crewNoteWidget
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr 10px;
+	grid-template-rows: 20px 1fr;
+	grid-gap: 0px;
+	height: 390px;
+	width: 435px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-crewNoteBox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-retirementWidget
+{
+	display: grid;
+	grid-template-columns: 1fr 4fr 10px;
+	grid-template-rows: 1fr 1fr 1fr;
+	grid-template-areas: "reserve plan ." "debt plan ." "shares plan .";
+	grid-gap: 0px;
+	height: 400px;
+	width: 900px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-retirementPlan
+{
+	grid-area: plan;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr 10px;
+	grid-template-rows: 20px 1fr;
+	grid-gap: 0px;
+	height: 400px;
+	width: 650px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-retirementReserve
+{
+	grid-area: reserve;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resources.png);
+	background-size: 163.5px 110.5px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 1fr 10px;
+	grid-template-rows: 20px 1fr;
+	grid-gap: 0px;
+	height: 110.5px;
+	width: 163.5px;
+	padding-top: 4px;
+	padding-left: 6px;
+	z-index: 0;
+}
+
+.sheet-retirementDebt
+{
+	grid-area: debt;
+}
+
+.sheet-retirementShares
+{
+	grid-area: shares;
+}
+
+.sheet-retirementResourceBox
+{
+	grid-column-start: 1;
+	grid-column-end: 2;
+	grid-row-start: 2;
+	grid-row-end: 3;
 }
 
 /* ******************************* */
