Added Retirement Image
Added Retirement Image

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -2131,8 +2131,8 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-contactWidget
 {
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
-	background-size: 100% 100%;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/contactNotes.png);
+	background-size: 440px 390px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
@@ -2140,8 +2140,7 @@ input[type="number"].sheet-upkeepBox
 	grid-gap: 0px;
 	height: 390px;
 	width: 435px;
-	padding-top: 4px;
-	padding-left: 6px;
+	padding: 4px;
 	z-index: 0;
 }
 
@@ -2169,8 +2168,8 @@ input[type="number"].sheet-upkeepBox
 
 .sheet-crewNoteWidget
 {
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
-	background-size: 100% 100%;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/contactNotes.png);
+	background-size: 440px 390px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 1fr 10px;
@@ -2178,8 +2177,7 @@ input[type="number"].sheet-upkeepBox
 	grid-gap: 0px;
 	height: 390px;
 	width: 435px;
-	padding-top: 4px;
-	padding-left: 6px;
+	padding: 4px;
 	z-index: 0;
 }
 
@@ -2208,12 +2206,12 @@ input[type="number"].sheet-upkeepBox
 .sheet-retirementPlan
 {
 	grid-area: plan;
-	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/language.png);
-	background-size: 100% 100%;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Retirement.png);
+	background-size: contain;
 	background-repeat: no-repeat;
 	display: grid;
-	grid-template-columns: 1fr 10px;
-	grid-template-rows: 20px 1fr;
+	grid-template-columns: 4fr 1fr 2fr 15px;
+	grid-template-rows: 24px 1fr;
 	grid-gap: 0px;
 	height: 400px;
 	width: 650px;
@@ -2222,39 +2220,80 @@ input[type="number"].sheet-upkeepBox
 	z-index: 0;
 }
 
+.sheet-retirementPlanSummary
+{
+	grid-column-start: 1;
+	grid-column-end: 4;
+	grid-row-start: 2;
+	grid-row-end: 3;
+}
+
+.sheet-retirementFactionTitle
+{
+	align-self: end;
+	justify-self: end;
+	padding-right: 4px;
+}
+
+.sheet-retirementFactionName
+{
+	align-self: end;
+}
+
+.sheet-retirementResources
+{
+	background-size: 169.5px 120px;
+	background-repeat: no-repeat;
+	display: grid;
+	grid-template-columns: 18px 1fr 18px;
+	grid-template-rows: 22px 1fr 18px;
+	grid-gap: 0px;
+	height: 120px;
+	width: 169.5px;
+	z-index: 0;
+}
+
+.sheet-retirementResourceTitle
+{
+	grid-column-start: 2;
+	grid-column-end: 3;
+	grid-row-start: 1;
+	grid-row-end: 2;
+	font-variant: small-caps;
+	padding-top: 4px;
+}
+
 .sheet-retirementReserve
 {
 	grid-area: reserve;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/resources.png);
-	background-size: 163.5px 110.5px;
-	background-repeat: no-repeat;
-	display: grid;
-	grid-template-columns: 1fr 10px;
-	grid-template-rows: 20px 1fr;
-	grid-gap: 0px;
-	height: 110.5px;
-	width: 163.5px;
-	padding-top: 4px;
-	padding-left: 6px;
-	z-index: 0;
 }
 
 .sheet-retirementDebt
 {
 	grid-area: debt;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/debt.png);
 }
 
 .sheet-retirementShares
 {
 	grid-area: shares;
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/shares.png);
 }
 
 .sheet-retirementResourceBox
 {
-	grid-column-start: 1;
-	grid-column-end: 2;
+	grid-column-start: 2;
+	grid-column-end: 3;
 	grid-row-start: 2;
 	grid-row-end: 3;
+}
+
+input[type="number"].sheet-retirementBox
+{	
+	height: 100%;
+	width: 100%;
+	font-size: 18px;
 }
 
 /* ******************************* */
