--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -2192,9 +2192,9 @@ input[type="number"].sheet-upkeepBox
 .sheet-retirementWidget
 {
 	display: grid;
-	grid-template-columns: 1fr 4fr 10px;
+	grid-template-columns: 1fr 4fr;
 	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-areas: "reserve plan ." "debt plan ." "shares plan .";
+	grid-template-areas: "reserve plan" "debt plan" "shares plan";
 	grid-gap: 0px;
 	height: 400px;
 	width: 900px;
@@ -2207,17 +2207,18 @@ input[type="number"].sheet-upkeepBox
 {
 	grid-area: plan;
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Retirement.png);
-	background-size: contain;
+	background-size: 720px 390px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 4fr 1fr 2fr 15px;
 	grid-template-rows: 24px 1fr;
 	grid-gap: 0px;
-	height: 400px;
-	width: 650px;
+	height: 385px;
+	width: 715px;
 	padding-top: 4px;
 	padding-left: 6px;
 	z-index: 0;
+	
 }
 
 .sheet-retirementPlanSummary
@@ -2226,6 +2227,7 @@ input[type="number"].sheet-upkeepBox
 	grid-column-end: 4;
 	grid-row-start: 2;
 	grid-row-end: 3;
+	margin-left: 4px;
 }
 
 .sheet-retirementFactionTitle
