Updated Json and added Overcharge image
Updated Json and added Overcharge image

--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -2610,6 +2610,24 @@ input[type="radio"]:checked + span.sheet-capacityPips ~ input[type="radio"] + sp
 	z-index: 2;
 }
 
+input[type="checkbox"] + span.sheet-overcharge
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/overchargeEmpty.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
+input[type="checkbox"]:checked + span.sheet-overcharge
+{
+	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/overcharge.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	opacity: 1;
+	z-index: 2;
+}
+
 input[type="checkbox"] + span.sheet-hexSelector
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/HexPip.png);
