--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -2452,6 +2452,16 @@ input[type="radio"].sheet-inlineCapacityCheckboxSmall
 	vertical-align: middle;
 }
 
+input[type="checkbox"].sheet-inlineCheckboxLarge,
+input[type="radio"].sheet-inlineCheckboxLarge
+{
+	width: 25px;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+	vertical-align: bottom;
+}
+
 /* Inline Image Location */
 span.sheet-inlineArmour
 {
@@ -2479,6 +2489,15 @@ span.sheet-inlineCapacityPips
 	width: 10px;
 	margin-left: -10px;
 	vertical-align: middle;
+}
+
+span.sheet-inlineOvercharge
+{
+	display: inline-block;
+	background-size: 40px 40px;
+	height: 40px;
+	width: 40px;
+	margin-left: -40px;
 }
 
 span.sheet-inlineCapacityPipsSmall
@@ -2910,8 +2929,8 @@ input[type="number"].sheet-currentCharge
 	text-align: center;
 	grid-column-start: 4;
 	grid-column-end: 5;
-	grid-row-start: 8;
-	grid-row-end: 9;
+	grid-row-start: 7;
+	grid-row-end: 10;
 }
 
 .sheet-systemDataBox
