--- a/Free Spacer/FreeSpacer.css
+++ b/Free Spacer/FreeSpacer.css
@@ -1435,7 +1435,7 @@ div.sheet-quarterPage
 	width: 220px;
 	display: grid;
 	grid-template-columns: 75px 1fr;
-	grid-template-rows: 25px 1fr;
+	grid-template-rows: 25px 1fr 5px;
 	grid-gap: 0px;
 	height: 156px;
 	z-index: 0;
@@ -3581,7 +3581,7 @@ input[type="number"].sheet-currentCharge
 .sheet-launchBay
 {
 	background-image: url(https://raw.githubusercontent.com/XophRA/FreeSpacerSheet/FreeSpacerRefactor_Feb18/Free%20Spacer/images/Shuttle.png);
-	background-size: 370px 335px;
+	background-size: 380px 335px;
 	background-repeat: no-repeat;
 	display: grid;
 	grid-template-columns: 14px 40px 60px 60px 50px 14px 42px 42px 24px 25px;
@@ -4285,6 +4285,31 @@ input[type=number].sheet-txtfield
 		justify-content: space-around;
 	}
 
+	.sheet-ship-block .sheet-shipUpkeepTitle
+	{
+		font-variant: small-caps;
+		grid-column-start:8;
+		grid-column-end:9;
+		grid-row-start:2;
+		grid-row-end: 3;
+		font-size: 9px;
+		align-self:center;
+		text-align: left;
+		padding-top: 6px;
+	}
+
+	.sheet-ship-block .sheet-shipPatchTitle
+	{
+		font-variant: small-caps;
+		grid-column-start: 8;
+		grid-column-end: 9;
+		grid-row-start: 8;
+		grid-row-end: 9;
+		font-size: 9px;
+		align-self: center;
+		text-align: left;
+		padding-top: 9px;
+	}
 
 	/* ship section armor */
 	.sheet-ship-block .sheet-border-armor
